# fhir-codebridge

./: .env.example  .gitignore  BENCHMARK.md  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  README.md  SECURITY.md  SNOMED_LICENSE.md  docker-compose.yml  docker-quickstart.sh  pyproject.toml  quickstart.sh  requirements.txt
.github/workflows/: ci.yml  update-terminology.yml
codebridge/: __init__.py
config/payer_rules/: README.md  medicaid_texas.yml  medicare.yml
data/terminology_parsed/: README.md  cdt.json  crosswalk_v3.json  db523_ontology.json  loinc_core.json
data/terminology_raw/icd10cm/: README.md
data/terminology_raw/umls/: README.md
docs/: CLAIM_VERIFICATION.md  RUNBOOK.md
docs/training/: admin-guide.md  glossary.md  quickstart-guide.md
examples/: client_example.py  curl_examples.sh  postman_collection.json
examples/nginx/: nginx.conf
scripts/: build_terminology_data.py  calibration_test_100.py  check_claims.py  download_cms_icd10.py  download_rxnorm.py  test_go_nogo.py
scripts/api/: logging_config.py  payer_rules.py  server.py
scripts/rag/: rag_lookup.py  umls_api.py
tests/: test_api.py  test_client.py
