[project]
name = "fhir-codebridge"
version = "0.4.1"
description = "Open-source on-prem FHIR terminology mapping service"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "pydantic>=2.0",
    "requests>=2.28",
    "python-multipart>=0.0.6",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.24"]

[project.scripts]
codebridge = "codebridge:main"

[tool.setuptools]
packages = ["codebridge", "scripts", "scripts.api", "scripts.rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
